added play again button

--- a/great_number_game/templates/index.html
+++ b/great_number_game/templates/index.html
@@ -23,6 +23,7 @@
           {% else %}
           <div class="equals">
             <h1>You guessed right!</h1>
+            <a href="/"><button>Play again</button></a>
           </div>
           {% endif %}
         {% endif %}
